# megaman

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  client.cpp  clientMegamanClient.cpp  clientMegamanClient.h  commonAddrInfo.h  commonSocket.cpp  commonSocket.h  commonThread.cpp  server.cpp  serverAcceptor.cpp  serverAcceptor.h  serverMatch.cpp  serverMatch.h  serverMegamanServer.cpp  serverMegamanServer.h
UML/: UML.asta  cliente.asta
cairo_example/: CMakeLists.txt  MyArea.cpp
client/: AboutScreen.cpp  AboutScreen.h  AboutWindow.cpp  AboutWindow.h  CMakeLists.txt  CMakeLists.txt~  Client.cpp  Client.h  ClientCommunicator.cpp  ClientCommunicator.h  GladeLoader.cpp  GladeLoader.h  MainWindow.cpp  MainWindow.h  SignalProtocol.h  TickInfoParser.cpp  TickInfoParser.h  WelcomeScreen.cpp  WelcomeScreen.h  client  clientMegamanClient.cpp  clientMegamanClient.h  log  main.cpp
client/communication/: Client.cpp  Client.h  ClientCommunicator.cpp  ClientCommunicator.h
client/resources/: about.glade  example.glade  insert_name.glade  loading_screen.glade  stage_pick.glade  stage_pick_box.glade  welcome_screen.glade  welcome_screen_bg.glade
client/view/: #stage_pick.glade#  AboutScreen.cpp  ActorRenderer.cpp  ActorRenderer.h  BlockRenderer.cpp  BlockRenderer.h  BossRenderer.cpp  BossRenderer.h  Camera.cpp  Camera.h  EnemyRenderer.cpp  EnemyRenderer.h  GameLoopThread.cpp  GameLoopThread.h  GladeLoader.cpp  GladeLoader.h  InputHandler.cpp  InputHandler.h  MainWindow.cpp  MainWindow.h  MegaManRenderer.cpp  MegaManRenderer.h  MegamanRenderer.cpp  MegamanRenderer.h  MetRenderer.cpp  MetRenderer.h  StageElementsConstants.h  StageRenderer.cpp  StageRenderer.h  StageScreen.cpp  StageScreen.h  StageSurface.cpp  StageSurface.h  TileRenderer.cpp  TileRenderer.h  Timer.cpp  Timer.h  WaitingRoomThread.cpp  WaitingRoomThread.h  about.glade  (+7 more)
cmake/: CppLint.cmake
common/: AddrInfo.cpp  CMakeLists.txt  CMakeLists.txt~  GameInfo.cpp  GameInfo.h  Packet.cpp  Packet.h  Position.cpp  Position.h  QuitProtected.cpp  QuitProtected.h  Receiver.cpp  Receiver.h  ScreenInfo.cpp  ScreenInfo.h  Sender.cpp  Sender.h  Socket.cpp  Socket.h  StageInfo.cpp  StageInfo.h  StageParser.cpp  StageParser.h  SystemError.cpp  SystemError.h  Thread.cpp  commonAddrInfo.cpp  commonSocket.cpp  commonSocket.h  commonThread.h
common/communication/: Packet.cpp  Packet.h  QuitProtected.h  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h  Socket.cpp  Socket.h
common/model/: Cannon.cpp  Cannon.h  Enemy.h  Game.cpp  Game.h  Map.cpp  Map.h  MegaMan.cpp  MegaMan.h  Object.cpp  Object.h  Player.cpp  Player.h  Position.cpp  Position.h
editor/: CMakeLists.txt  EditorWindow.cpp  EditorWindow.h  editor.glade
examples/: CMakeLists.txt
examples/box2d_ex/: CMakeLists.txt  main.cpp
examples/cairo_example/: MyArea.h  main.cpp
examples/json_ex/: json_test.cpp
examples/json_example/: json_test.cpp
examples/log4cpp_ex/: CMakeLists.txt  main.cpp
examples/sdl/: CMakeLists.txt
examples/sdl2_ex/: CMakeLists.txt  main.cpp
examples/sdl2pp_ex/: CMakeLists.txt  main.cpp
json_example/: CMakeLists.txt  example.json
server/: Acceptor.cpp  Acceptor.h  CMakeLists.txt  CMakeLists.txt~  Cannon.cpp  Cannon.h  Communicator.cpp  Communicator.h  Enemy.cpp  Factory.cpp  Factory.h  Logger.cpp  Logger.h  Match.cpp  Match.h  MegaMan.cpp  MegaMan.h  Object.cpp  Object.h  Packet.cpp  Packet.h  Player.cpp  Player.h  QuitProtected.cpp  QuitProtected.h  Server.cpp  Server.h  ServerCommunicator.cpp  ServerCommunicator.h  Stage.cpp  Stage.h  basic_stage.json  info.json  logconfig  main.cpp  server.cpp  serverAcceptor.cpp  serverAcceptor.h  serverMatch.cpp  serverMatch.h  (+2 more)
server/communication/: Acceptor.cpp  Acceptor.h  EventQueue.cpp  EventQueue.h  InfoMaker.cpp  InfoMaker.h  Match.cpp  Match.h  Server.cpp  Server.h  ServerCommunicator.cpp  ServerCommunicator.h  ServerReceiver.cpp  ServerReceiver.h  Stage.cpp  Stage.h  TickInfoMaker.cpp  TickInfoMaker.h
server/model/: Boss.cpp  Boss.h  BossChamber.cpp  BossChamber.h  Cannon.cpp  Cannon.h  Enemy.cpp  Enemy.h  Factory.cpp  Factory.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameObjectHandler.cpp  GameObjectHandler.h  GameObjectParser.cpp  GameObjectParser.h  GameObjectSetter.cpp  GameObjectSetter.h  Map.cpp  Map.h  MegaMan.cpp  MegaMan.h  Mortal.h  Movable.cpp  Movable.h  Object.cpp  Object.h  Player.cpp  Player.h  Position.cpp  Position.h  PowerUp.cpp  PowerUp.h  ServerStageSetter.cpp  ServerStageSetter.h  Shooter.h  Stage.cpp  Stage.h  (+4 more)
test/: CMakeLists.txt  bool_test.cpp  number_test.cpp
